# SolTokenTerminal

./: .gitignore  Cargo.toml  README.md
src/: helpers.rs  main.rs
src/config/: ajay_keypair.json  bjay_keypair.json
