[package]
name = "SolTokenTerminal"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "2.2.7"
solana-sdk = "2.2.2"
spl-associated-token-account = "7.0.0"
spl-token-client = "0.16.1"
spl-token-confidential-transfer-proof-extraction = "0.4.0"
spl-token-confidential-transfer-proof-generation = "0.4.0"
tokio = "1.47.1"
